--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -9,227 +9,39 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 20px;
 
-    .top-cards {
-        display: flex;
-        gap: 20px;
-        .dashboard-card {
-          width: 200px; /* Adjust as needed */
-          .mat-card-header {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-          }
-          .value-container {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            .value{
-              font-size: 22px;
-            }
-          }
-          .progress-container{
-            display: flex;
-            align-items: center;
-            font-size: 12px;
-              mat-icon{
-                font-size: 18px;
-                  height: 18px;
-                width: 18px;
-            }
-          }
-          .green-progress{
-            color: green;
-          }
-          .red-progress{
-            color: red;
-          }
-          .vs-text {
-              display: block;
-              margin-top: 5px;
-              font-size: 12px;
-              color: #777;
-          }
-        }
-    }
-    .main-content {
-      display: grid;
-      grid-template-rows: auto auto; /* Two rows, auto height */
-      grid-gap: 20px;
-
-      .row-1 {
-          display: grid;
-        grid-template-columns: 2fr 1fr; /* Chart and recent sales card in a row */
-          grid-gap: 20px;
-      }
-
-      .row-2 {
-        display: grid;
-        grid-template-columns: 4fr; /* Table and pie chart in a row */
-          grid-gap: 20px;
-      }
-
-      .bar-chart {
-        display: flex;
-        flex-direction: column;
-        height: 200px;
-        .chart-container{
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            .bars {
-                display: flex;
-                align-items: flex-end;
-                height: 100%;
-                .bar-item {
-                    width: 15px;
-                    background-color: #f5f5f5;
-                    display: flex;
-                    justify-content: center;
-                    .bar {
-                       width: 100%;
-                       background-color: #7871E7;
-                    }
-                }
-            }
-            .bar-chart-canvas {
-              width: 100%;
-              height: 200px;
-          }
-            .labels {
-                display: flex;
-                justify-content: space-between;
-                margin-top: 5px;
-              .label {
-                 font-size: 12px;
-                   text-align: center;
-                    width: 15px;
-                    overflow: hidden;
-                    transform: rotate(-90deg);
-                    transform-origin: top right;
-                }
-            }
-        }
-    }
-      .mat-row {
-        width: 100% !important;
-        .mat-mdc-header-row {
-          background-color: #f5f5f5;
-        }
-        .mat-mdc-cell {
-          // border-bottom: 1px solid #e0e0e0;
-            padding: 10px 0;
-        }
-          .avatar {
-            width: 20px;
-            height: 20px;
-              border-radius: 50%;
-            object-fit: cover;
-              margin-right: 10px;
-          }
-          .success-status{
-            padding: 5px;
-            border-radius: 10px;
-              background-color: #E6F6EA;
-            color: green;
-              font-size: 12px;
-          }
-          .failure-status{
-            padding: 5px;
-              border-radius: 10px;
-            background-color: #FCEBE8;
-            color: red;
-              font-size: 12px;
-          }
-      }
-      .recent-sales {
-        display: flex;
-          flex-direction: column;
-        gap: 15px;
-          .sale-item {
-              display: flex;
-              align-items: center;
-              gap: 10px;
-            .avatar {
-                width: 30px;
-              height: 30px;
-                border-radius: 50%;
-              object-fit: cover;
-            }
-          .sale-details {
-              flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            .name{
-                font-size: 20px;
-            }
-            .time {
-                font-size: 12px;
-                color: #777;
-            }
-        }
-        }
-    }
-    .pie-chart {
-      display: flex;
-      justify-content: center;
-        align-items: center;
-      position: relative;
-        width: 300px;
-      height: 300px;
-      .pie {
-          width: 100%;
-          height: 100%;
-          border-radius: 50%;
-          background: conic-gradient(#4481eb 0deg, #4481eb calc(var(--percentage)* 3.6deg), #3f51b5 calc(var(--percentage)* 3.6deg));          transition: background .3s ease-out;
-      }
-      .center-text {
-        position: absolute;
-          top: 50%;
-          left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-          span {
-              display: block;
-              font-weight: bold;
-              font-size: 16px;
-          }
-      }
+  .top-cards {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
   }
-      .doughnut-chart {
-        display: flex;
-          justify-content: center;
-        align-items: center;
-          .chart-container{
-            position: relative;
-              width: 150px;
-            height: 150px;
-          }
-          .doughnut {
-              width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background: conic-gradient(#fca5a5 0 deg calc(var(--percentage) * 3.6deg), #fff calc(var(--percentage) * 3.6deg) );
-              transition: background .3s ease-out;
-          }
-          .center-text {
-              position: absolute;
-            top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-            text-align: center;
-            span{
-              display: block;
-                  font-weight: bold;
-                  font-size: 16px;
-            }
-          }
 
+  .main-content {
+    .row-1 {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+
+      .col-6 {
+        flex: 0 0 calc(50% - 10px);
+        max-width: calc(50% - 10px);
       }
 
-      .spacer{
-        flex: 1 1 auto;
+      mat-card {
+        height: 100%;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
       }
+    }
+
+    .row-2 {
+      mat-card {
+        width: 100%;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+      }
+    }
   }
 }
 
@@ -257,6 +69,7 @@ mat-select {
   background-color: #fff;
   padding: 0.5rem;
 }
+
 .top-cards {
   display: flex;
   gap: 16px;
@@ -290,6 +103,7 @@ mat-select {
 .red-progress {
   color: red;
 }
+
 table {
   width: 100%;
   border-collapse: collapse;
