--- a/src/app/organization/userform/userform.component.html
+++ b/src/app/organization/userform/userform.component.html
@@ -47,35 +47,33 @@
 
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Role</mat-label>
-          <mat-select formControlName="role" required>
-            <mat-option *ngFor="let role of rolesdata" [value]="role.id">
+          <mat-select formControlName="role_id" required>
+            <mat-option *ngFor="let role of roles" [value]="role.id">
               {{role.name}}
             </mat-option>
           </mat-select>
-          <mat-error *ngIf="userForm.get('role')?.hasError('required')">
+          <mat-error *ngIf="userForm.get('role_id')?.hasError('required')">
             Role is required
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Department</mat-label>
-          <mat-select formControlName="department">
-            <!-- <mat-option value="">Select Department</mat-option> -->
-            <mat-option *ngFor="let s of departmentData" [value]="s.id">{{s.name}}</mat-option>
+          <mat-select formControlName="department_id">
+            <mat-option *ngFor="let dept of departmentData" [value]="dept.id">{{dept.name}}</mat-option>
           </mat-select>
-          <mat-error *ngIf="userForm.get('role')?.hasError('required')">
-            Role is required
+          <mat-error *ngIf="userForm.get('department_id')?.hasError('required')">
+            Department is required
           </mat-error>
         </mat-form-field>
       </div>
       <div class="form-row">
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Branch</mat-label>
-          <mat-select formControlName="branch">
-            <mat-option *ngFor="let s of branchData;let i=index" [value]="s.id">{{s.branchName}}</mat-option>
-           
+          <mat-select formControlName="branch_id">
+            <mat-option *ngFor="let branch of branchData" [value]="branch.id">{{branch.branchName}}</mat-option>
           </mat-select>
-          <mat-error *ngIf="userForm.get('role')?.hasError('required')">
-            Role is required
+          <mat-error *ngIf="userForm.get('branch_id')?.hasError('required')">
+            Branch is required
           </mat-error>
         </mat-form-field>
         
@@ -83,12 +81,12 @@
 
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Designation</mat-label>
-          <mat-select formControlName="designation" required>
-            <mat-option *ngFor="let role of designationData" [value]="role.id">
-              {{role.designation_name}}
+          <mat-select formControlName="designation_id" required>
+            <mat-option *ngFor="let designation of designationData" [value]="designation.id">
+              {{designation.designation_name}}
             </mat-option>
           </mat-select>
-          <mat-error *ngIf="userForm.get('designation_name')?.hasError('required')">
+          <mat-error *ngIf="userForm.get('designation_id')?.hasError('required')">
             Designation is required
           </mat-error>
         </mat-form-field>
